--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- Bootstrap -->
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="style.css">
+    <!-- CSS -->
 </head>
 
 <body>
@@ -18,7 +20,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand fs-4 fw-bold" href="#">Jhon Doe</a>
+            <a class="navbar-brand fs-4 fw-bold" href="#">JIMMYWIRAARBAA</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -42,6 +44,28 @@
         </div>
     </nav>
     <!-- Navbar End -->
+
+    <!-- Home Start -->
+    <section id="home" class="home container">
+        <div class="row d-flex align-items-center">
+            <div class="col-8">
+                <h3 class="fw-semibold">Hi! I am</h3>
+                <h1 class="fw-bold">Jimmy</h1>
+                <p>I am Software Engineer based in Indonesia</p>
+                <a class="btn button" href="images/potrait.png" download="">Resume</a>
+            </div>
+            <div class="col-4">
+                <img src="images/potrait.png" alt="Potrait">
+            </div>
+        </div>
+
+        <!-- More Info -->
+        <div class="w-100 arrow d-flex align-items-center flex-column mt-5">
+            <a class="text-decoration-none text-dark" href="#about">More info</a>
+            <img id="arrow" class="mt-2" src="images/arrow.svg" alt="arrow icon">
+        </div>
+    </section>
+    <!-- Home End -->
 
     <!-- Bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
