--- a/index.html
+++ b/index.html
@@ -67,6 +67,59 @@
     </section>
     <!-- Home End -->
 
+    <!-- About Start -->
+    <section id="about" class="about container">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti cupiditate ratione, culpa eius quasi
+            debitis similique eum perferendis unde earum corporis voluptatibus laboriosam rem necessitatibus tenetur
+            fuga nobis autem voluptas. Adipisci itaque repellendus, sunt repellat reiciendis ab voluptatibus cum unde?
+            Placeat quos quam voluptatem ad! In adipisci ut facere impedit.</p>
+        <div class="about-exp">
+            <div class="about-exp-item">
+                <div class="about-exp-item-header">
+                    <div>
+                        <h5>Software Engineer</h5>
+                        <p>Coding Studio (2022-Now)</p>
+                    </div>
+                    <button class="btn button" onclick="toggleDetail(event)">More Info</button>
+                </div>
+                <p class="about-exp-item-detail">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Consequuntur labore dicta laboriosam
+                    voluptate ipsa aspernatur aliquam molestias dolor voluptatum dolorum harum tempore, omnis culpa
+                    cumque! Possimus assumenda quia similique perferendis.</p>
+
+            </div>
+            <div class="about-exp-item">
+                <div class="about-exp-item-header">
+                    <div>
+                        <h5>Software Engineer</h5>
+                        <p>Coding Studio (2022-Now)</p>
+                    </div>
+                    <button class="btn button" onclick="toggleDetail(event)">More Info</button>
+                </div>
+                <p class="about-exp-item-detail">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Consequuntur labore dicta laboriosam
+                    voluptate ipsa aspernatur aliquam molestias dolor voluptatum dolorum harum tempore, omnis culpa
+                    cumque! Possimus assumenda quia similique perferendis.</p>
+
+            </div>
+            <div class="about-exp-item">
+                <div class="about-exp-item-header">
+                    <div>
+                        <h5>Software Engineer</h5>
+                        <p>Coding Studio (2022-Now)</p>
+                    </div>
+                    <button class="btn button" onclick="toggleDetail(event)">More Info</button>
+                </div>
+                <p class="about-exp-item-detail">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Consequuntur labore dicta laboriosam
+                    voluptate ipsa aspernatur aliquam molestias dolor voluptatum dolorum harum tempore, omnis culpa
+                    cumque! Possimus assumenda quia similique perferendis.</p>
+
+            </div>
+        </div>
+    </section>
+    <!-- About End -->
+
     <!-- Bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
