--- a/index.html
+++ b/index.html
@@ -120,6 +120,33 @@
     </section>
     <!-- About End -->
 
+    <!-- Work Start -->
+    <section id="work" class="work container">
+        <div class="row d-flex align-items-center gap-5">
+            <div class="col">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate, vero tempora! Tempora distinctio
+                    omnis, ullam eveniet iure sequi atque veniam provident ratione pariatur, facere natus, doloremque
+                    totam in quibusdam sed consequatur! Magnam laboriosam delectus dicta velit, quidem assumenda debitis
+                    odio culpa dolorem ducimus sint ex recusandae! Hic architecto expedita laudantium?</p>
+            </div>
+            <div class="col work-img">
+                <div id="work-1" class="work-img-item">
+                    <img src="images/work-1.png" alt="work 1" id="work-1">
+                </div>
+
+                <div id="work-2" class="work-img-item">
+                    <img src="images/work-2.png" alt="work 2" id="work-2">
+                </div>
+
+                <div id="work-3" class="work-img-item">
+                    <img src="images/work-3.png" alt="work 1" id="work-1">
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <!-- Work End -->
+
     <!-- Bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
