--- a/index.html
+++ b/index.html
@@ -147,6 +147,53 @@
     </section>
     <!-- Work End -->
 
+    <!-- Contact Start -->
+    <section id="contact" class="contact container">
+        <div class="row d-flex align-items-center gap-5">
+            <div class="col">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero numquam, ab eligendi qui praesentium
+                    ea.</p>
+                <div class="row">
+                    <div class="col d-flex align-items-center">
+                        <img src="images/Facebook.svg" alt="facebook icon">
+                        <p>Jimmy Wira Arba'a</p>
+                    </div>
+                    <div class="col d-flex align-items-center">
+                        <img src="images/Instagram.svg" alt="instagram icon">
+                        <p>@wiraarbaa_</p>
+                    </div>
+                    <div class="col d-flex align-items-center">
+                        <img src="images/Twitter.svg" alt="twitter icon">
+                        <p>dont have account</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Form -->
+            <div class="col">
+                <form class="contact-form" onsubmit="onFormSubmit(event)">
+                    <div class="mb-3">
+                        <label for="inp_email" class="form-label">Email address</label>
+                        <input type="email" class="form-control" id="inp_email" placeholder="example@gmail.com"
+                            required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="inp_subject" class="form-label">Subject</label>
+                        <input type="text" class="form-control" id="inp_subject" placeholder="Your Subject" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="inp_message" class="form-label">Message</label>
+                        <input type="text" class="form-control" id="inp_message" placeholder="Your Message" required>
+                    </div>
+                    <div class="d-flex justify-content-center mt-5">
+                        <button type="submit" class="btn button">Submit</button>
+                    </div>
+                </form>
+            </div>
+            <!-- Form -->
+        </div>
+    </section>
+    <!-- Contact End -->
+
     <!-- Bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
