--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#home">Home</a>
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#about">About</a>
@@ -69,10 +69,17 @@
 
     <!-- About Start -->
     <section id="about" class="about container">
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti cupiditate ratione, culpa eius quasi
-            debitis similique eum perferendis unde earum corporis voluptatibus laboriosam rem necessitatibus tenetur
-            fuga nobis autem voluptas. Adipisci itaque repellendus, sunt repellat reiciendis ab voluptatibus cum unde?
-            Placeat quos quam voluptatem ad! In adipisci ut facere impedit.</p>
+        <p>Saya adalah seorang mahasiswa yang bersemangat dalam mengejar karir di dunia teknologi. Saya secara aktif
+            mengikuti
+            kursus online dan berkomitmen untuk terus belajar dan berkembang. Fokus utama saya adalah menjadi seorang
+            software
+            engineer yang kompeten, front-end web developer yang kreatif, dan android developer yang terampil. Saya
+            percaya bahwa
+            kombinasi antara pemahaman mendalam tentang pemrograman, desain antarmuka yang menarik, dan kemampuan
+            mengembangkan
+            aplikasi mobile adalah kunci kesuksesan dalam industri teknologi. Saya sangat bersemangat untuk menjembatani
+            ilmu yang
+            saya dapatkan di bangku kuliah dengan praktik nyata di dunia industri.</p>
         <div class="about-exp">
             <div class="about-exp-item">
                 <div class="about-exp-item-header">
@@ -123,13 +130,21 @@
     <!-- Work Start -->
     <section id="work" class="work container">
         <div class="row d-flex align-items-center gap-5">
-            <div class="col">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate, vero tempora! Tempora distinctio
-                    omnis, ullam eveniet iure sequi atque veniam provident ratione pariatur, facere natus, doloremque
-                    totam in quibusdam sed consequatur! Magnam laboriosam delectus dicta velit, quidem assumenda debitis
-                    odio culpa dolorem ducimus sint ex recusandae! Hic architecto expedita laudantium?</p>
+            <div class="col-12 col-md-5">
+                <p>Saya adalah seorang profesional yang berperan ganda sebagai Front-End Web Developer, App Developer,
+                    dan UI/UX Designer.
+                    Sebagai Front-End Web Developer, saya menciptakan tampilan dan interaksi antarmuka web dengan
+                    menggunakan HTML, CSS, dan
+                    JavaScript. Sebagai App Developer, saya merancang dan mengembangkan aplikasi perangkat lunak untuk
+                    berbagai platform,
+                    dan sebagai UI/UX Designer, saya merancang desain visual dan pengalaman pengguna yang efektif,
+                    memastikan produk saya
+                    menawarkan antarmuka yang menarik dan intuitif. Pekerjaan saya berfokus pada pengembangan dan desain
+                    produk perangkat
+                    lunak yang memadukan aspek-aspek teknis dan estetika untuk menciptakan pengalaman pengguna yang luar
+                    biasa.</p>
             </div>
-            <div class="work-img">
+            <div class="col-12 col-md-6 work-img">
                 <div id="work-1" class="work-img-item">
                     <img src="images/work-1.png" alt="work 1" id="work-1">
                 </div>
@@ -151,8 +166,9 @@
     <section id="contact" class="contact container">
         <div class="row d-flex align-items-center gap-5">
             <div class="col-12 col-lg-6">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero numquam, ab eligendi qui praesentium
-                    ea.</p>
+                <p>Kami siap mendengar dari Anda. Jangan ragu untuk menghubungi tim kami untuk pertanyaan, saran, atau
+                    bantuan. Kami akan
+                    dengan senang hati merespons secepat mungkin.</p>
                 <div class="row">
                     <div class="col d-flex align-items-center">
                         <img class="wd-5" src="images/Facebook.svg" alt="facebook icon">
@@ -163,8 +179,8 @@
                         <p class="mb-0 ms-2">@wiraarbaa_</p>
                     </div>
                     <div class="col d-flex align-items-center">
-                        <img class="wd-5" src="images/Twitter.svg" alt="twitter icon">
-                        <p class="mb-0 ms-2">dont have account</p>
+                        <img class="wd-5" src="images/linkedin.svg" alt="twitter icon">
+                        <p class="mb-0 ms-2">Jimmy Wira Arbaa</p>
                     </div>
                 </div>
             </div>
