--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <a class="btn button" href="images/potrait.png" download="">Resume</a>
             </div>
             <div class="col-12 col-md-4 d-flex justify-content-md-end justify-content-center">
-                <img src="images/potrait.png" alt="Potrait">
+                <img src="images/potrait-jimmy.png" alt="Potrait">
             </div>
         </div>
 
@@ -89,38 +89,52 @@
                     </div>
                     <button class="btn button" onclick="toggleDetail(event)">More Info</button>
                 </div>
-                <p class="about-exp-item-detail">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Consequuntur labore dicta laboriosam
-                    voluptate ipsa aspernatur aliquam molestias dolor voluptatum dolorum harum tempore, omnis culpa
-                    cumque! Possimus assumenda quia similique perferendis.</p>
+                <p class="about-exp-item-detail">Saya dengan bangga telah menyelesaikan kursus Fundamental Front-End Web
+                    Development I di Coding Studio. Kursus ini
+                    memberi saya dasar yang kuat dalam pemahaman tentang teknologi front-end, termasuk HTML, CSS, dan
+                    JavaScript. Saya siap
+                    untuk mengaplikasikan pengetahuan baru ini dalam pembuatan tampilan web yang menarik dan interaktif,
+                    serta melanjutkan
+                    perjalanan belajar saya dalam pengembangan web. <a
+                        href="https://codingstudio.id/certificate/75C0F65EE4-75B518F58C-75B50B10E7/">Kredensial</a></p>
 
             </div>
             <div class="about-exp-item">
                 <div class="about-exp-item-header">
                     <div>
-                        <h5>Software Engineer</h5>
-                        <p>Coding Studio (2022-Now)</p>
+                        <h5>Web Development Pemula (Gold)</h5>
+                        <p>Skilvull (Jun 2023- Jun 2025)</p>
                     </div>
                     <button class="btn button" onclick="toggleDetail(event)">More Info</button>
                 </div>
-                <p class="about-exp-item-detail">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Consequuntur labore dicta laboriosam
-                    voluptate ipsa aspernatur aliquam molestias dolor voluptatum dolorum harum tempore, omnis culpa
-                    cumque! Possimus assumenda quia similique perferendis.</p>
+                <p class="about-exp-item-detail">Saya adalah seorang pemula dalam belajar pengembangan web di Skilvul
+                    dan dengan tekad dan kerja keras, saya berhasil
+                    meraih medali emas. Proses belajar ini telah memungkinkan saya untuk mendapatkan pemahaman yang kuat
+                    tentang dasar-dasar
+                    pengembangan web, dan saya siap untuk terus tumbuh dan mengembangkan keterampilan saya di dunia yang
+                    menarik ini. <a
+                        href="https://badgr.com/public/assertions/b_a__7gTQHa1IUrgf5evJA?identity__email=jimmywiraarbaa03@gmail.com">Kredensial</a>
+                </p>
 
             </div>
             <div class="about-exp-item">
                 <div class="about-exp-item-header">
                     <div>
-                        <h5>Software Engineer</h5>
-                        <p>Coding Studio (2022-Now)</p>
+                        <h5>Android Developer</h5>
+                        <p>dicoding (2023-Sep 2026)</p>
                     </div>
                     <button class="btn button" onclick="toggleDetail(event)">More Info</button>
                 </div>
-                <p class="about-exp-item-detail">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Consequuntur labore dicta laboriosam
-                    voluptate ipsa aspernatur aliquam molestias dolor voluptatum dolorum harum tempore, omnis culpa
-                    cumque! Possimus assumenda quia similique perferendis.</p>
+                <p class="about-exp-item-detail">Sebagai seorang Android Developer yang memulai perjalanan pemrograman
+                    dengan bahasa Kotlin melalui kursus di Dicoding,
+                    saya berkomitmen untuk mengembangkan aplikasi-aplikasi Android inovatif. Dengan dasar pemahaman yang
+                    kuat tentang
+                    Kotlin, saya siap untuk menciptakan pengalaman pengguna yang lebih baik melalui aplikasi-aplikasi
+                    yang responsif dan
+                    berkualitas tinggi. Saya percaya bahwa kombinasi antara pengetahuan bahasa pemrograman yang solid
+                    dan praktik yang terus
+                    menerus akan membawa hasil yang luar biasa dalam dunia pengembangan Android. <a
+                        href="https://www.dicoding.com/certificates/KEXLL0VRMXG2">Kredensial</a></p>
 
             </div>
         </div>
